chore(PublicationTemplate): add word-wrap to stop text from overflowing

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_articlePagination.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_articlePagination.scss
@@ -2,6 +2,7 @@
     border-top: 1px solid $stockport-grey-lighter;
     padding: 0;
     display: flex;
+    overflow-wrap: anywhere;
     
     @media #{$mobile} {
         display: block;
