--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_directories.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_directories.scss
@@ -22,6 +22,7 @@
 .directory {
     display: flex;
     flex-direction: row;
+    word-wrap: break-word;
 
     @media #{$mobile} {
         margin-left: 5px;
